# raptor-cs6964

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: naive_point_in_polygon.py  qgis_zonal_stats_script.py  raster_methods.py  run_in_qgis.sh  standalone_qgys.py
src/data/: ne_10m_admin_0_countries.dbf
src/data/US_MSR_10M/: Read_me.txt
