[project]
name = "raptor-cs6964"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geocube>=0.7.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "pyqt5>=5.15.11",
    "pyqt6>=6.8.0",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "tqdm>=4.67.1",
    "xarray>=2025.1.1",
]
